<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccountPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMyPage"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/textUserName"
        style="@style/generalText"
        android:layout_marginTop="20dip"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        />

    <TextView
        android:id="@+id/textMyPage"
        style="@style/generalText"
        android:layout_marginTop="30dip"
        android:text="@string/my_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textCreateID"
        style="@style/generalText"
        android:text="@string/id"
        android:layout_marginTop="20dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/textUserName"
        />

    <TextView
        android:id="@+id/textCreatePassword"
        android:layout_marginTop="30dip"
        style="@style/generalText"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/textCreateID"
        app:layout_constraintTop_toBottomOf="@id/textCreateID"
        />

    <TextView
        android:id="@+id/textEmail"
        style="@style/generalText"
        android:layout_marginTop="30dip"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/textCreatePassword"
        app:layout_constraintTop_toBottomOf="@id/textCreatePassword"
        />

    <TextView
        android:id="@+id/textPhoneNum"
        style="@style/generalText"
        android:layout_marginTop="30dip"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        />

    <EditText
        android:id="@+id/editCreateID"
        style="@style/generalText"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/textCreateID"
        app:layout_constraintStart_toEndOf="@id/colonCreateID"
        />

    <EditText
        android:id="@+id/editCreatePassword"
        style="@style/generalText"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/editCreateID"
        app:layout_constraintBottom_toBottomOf="@id/textCreatePassword"
        />

    <EditText
        android:id="@+id/editEmail"
        style="@style/generalText"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editCreatePassword"
        app:layout_constraintBottom_toBottomOf="@id/textEmail"
        />

    <EditText
        android:id="@+id/editPhoneNum"
        style="@style/generalText"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/editEmail"
        app:layout_constraintBottom_toBottomOf="@id/textPhoneNum"
        />

    <TextView
        android:id="@+id/colonCreateID"
        style="@style/generalText"
        android:text="@string/colon"
        app:layout_constraintStart_toStartOf="@id/colonCreatePassword"
        app:layout_constraintBottom_toBottomOf="@id/textCreateID"
        />

    <TextView
        android:id="@+id/colonCreatePassword"
        style="@style/generalText"
        android:text="@string/colon"
        app:layout_constraintStart_toStartOf="@id/colonEmail"
        app:layout_constraintBottom_toBottomOf="@id/textCreatePassword"
        />

    <TextView
        android:id="@+id/colonEmail"
        style="@style/generalText"
        android:text="@string/colon"
        app:layout_constraintStart_toStartOf="@id/colonPhoneNum"
        app:layout_constraintBottom_toBottomOf="@id/textEmail"
        />

    <TextView
        android:id="@+id/colonPhoneNum"
        style="@style/generalText"
        android:text="@string/colon"
        android:layout_marginStart="5dip"
        app:layout_constraintStart_toEndOf="@id/textPhoneNum"
        app:layout_constraintBottom_toBottomOf="@id/textPhoneNum"
        />

    <Button
        android:id="@+id/modifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="Modify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneNum" />

    <Button
        android:id="@+id/plannerBtnAccPg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/planner"
        app:layout_constraintEnd_toStartOf="@+id/portfolioBtnAccPg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyBtn"
        />

    <Button
        android:id="@+id/portfolioBtnAccPg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/plannerBtnAccPg"
        app:layout_constraintTop_toTopOf="@+id/plannerBtnAccPg" />


</androidx.constraintlayout.widget.ConstraintLayout>