<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPage"
    android:background="@color/color_2">

    <ImageView
        android:id="@+id/logoSelectPg"
        style="@style/logo"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/textWelcome"
        style="@style/generalText1"
        android:layout_marginTop="20dip"
        android:textColor="@color/color_3"
        android:text="@string/welcome_to_showtimetable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSelectPg"
        />

    <Button
        android:id="@+id/goToPlannerBtn"
        style="@style/generalBtn1"
        android:layout_width="130dip"
        android:layout_height="200dip"
        android:layout_marginTop="20dip"
        android:text="@string/go_to_planner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/goToPortfolioBtn"
        app:layout_constraintTop_toBottomOf="@id/textWelcome"
        />

    <Button
        android:id="@+id/goToPortfolioBtn"
        style="@style/generalBtn1"
        android:layout_width="130dip"
        android:layout_height="200dip"
        android:text="@string/go_to_portfolio"
        app:layout_constraintStart_toEndOf="@id/goToPlannerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/goToPlannerBtn"
        />

    <Button
        android:id="@+id/goToMyPage"
        style="@style/generalBtn2"
        android:layout_width="200dip"
        android:layout_marginTop="50dip"
        android:text="@string/my_page"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/goToPlannerBtn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>