<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/createAccountBtn"
        style="@style/loginPageCreateAccountBtn"
        android:layout_marginTop="50dip"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <Button
        android:id="@+id/loginBtn"
        style="@style/loginPageLoginBtn"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/createAccountBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/textID"
        style="@style/loginPageText"
        android:layout_marginTop="30dip"
        android:text="@string/id"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <EditText
        android:id="@+id/editID"
        style="@style/loginPageText"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/editPassword"
        app:layout_constraintBottom_toBottomOf="@id/textID"
        />

    <TextView
        android:id="@+id/textPassword"
        android:layout_marginTop="20dip"
        style="@style/loginPageText"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/textID"
        app:layout_constraintTop_toBottomOf="@id/textID" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/loginPageText"
        android:layout_marginStart="5dip"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@id/colonPassword"
        app:layout_constraintBottom_toBottomOf="@id/textPassword"
        />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dip"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/showtimetable_ass_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/colonID"
        style="@style/loginPageText"
        android:text="@string/colon"
        android:layout_marginEnd="5dip"
        app:layout_constraintBottom_toBottomOf="@id/textID"
        app:layout_constraintEnd_toStartOf="@id/editID"
        />

    <TextView
        android:id="@+id/colonPassword"
        android:layout_marginStart="5dip"
        style="@style/loginPageText"
        android:text="@string/colon"
        app:layout_constraintBottom_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toEndOf="@id/textPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>