<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountPage"
    android:background="@color/color_2">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBtnCreateAccPg"
        style="@style/backBtn"
        app:tint="@color/color_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/transparent"
        app:srcCompat="@drawable/ic_back_icon_foreground" />

    <TextView
        android:id="@+id/textCreateID"
        style="@style/generalText1"
        android:text="@string/id"
        android:layout_marginTop="20dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/textSignUp"
        />

    <TextView
        android:id="@+id/textCreatePassword"
        style="@style/generalText1"
        android:layout_marginTop="30dip"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/textCreateID"
        app:layout_constraintTop_toBottomOf="@id/textCreateID"
        />

    <TextView
        android:id="@+id/textEmail"
        style="@style/generalText1"
        android:layout_marginTop="30dip"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/textCreatePassword"
        app:layout_constraintTop_toBottomOf="@id/textCreatePassword"
        />

    <TextView
        android:id="@+id/textPhoneNum"
        style="@style/generalText1"
        android:layout_marginTop="30dip"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        />

    <EditText
        android:id="@+id/editCreateID"
        style="@style/generalText1"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/textCreateID"
        app:layout_constraintStart_toEndOf="@id/colonCreateID"
        />

    <EditText
        android:id="@+id/editCreatePassword"
        style="@style/generalText1"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/editCreateID"
        app:layout_constraintBottom_toBottomOf="@id/textCreatePassword"
        />

    <EditText
        android:id="@+id/editEmail"
        style="@style/generalText1"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editCreatePassword"
        app:layout_constraintBottom_toBottomOf="@id/textEmail"
        />

    <EditText
        android:id="@+id/editPhoneNum"
        style="@style/generalText1"
        android:layout_width="200dip"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/editEmail"
        app:layout_constraintBottom_toBottomOf="@id/textPhoneNum"
        />

    <TextView
        android:id="@+id/colonCreateID"
        style="@style/generalText1"
        android:text="@string/colon"
        app:layout_constraintStart_toStartOf="@id/colonCreatePassword"
        app:layout_constraintBottom_toBottomOf="@id/textCreateID"
        />

    <TextView
        android:id="@+id/colonCreatePassword"
        style="@style/generalText1"
        android:text="@string/colon"
        app:layout_constraintStart_toStartOf="@id/colonEmail"
        app:layout_constraintBottom_toBottomOf="@id/textCreatePassword"
        />

    <TextView
        android:id="@+id/colonEmail"
        style="@style/generalText1"
        android:text="@string/colon"
        app:layout_constraintStart_toStartOf="@id/colonPhoneNum"
        app:layout_constraintBottom_toBottomOf="@id/textEmail"
        />

    <TextView
        android:id="@+id/colonPhoneNum"
        style="@style/generalText1"
        android:text="@string/colon"
        android:layout_marginStart="5dip"
        app:layout_constraintStart_toEndOf="@id/textPhoneNum"
        app:layout_constraintBottom_toBottomOf="@id/textPhoneNum"
        />

    <ImageView
        android:id="@+id/logoCreateAccountPg"
        style="@style/logo"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/textSignUp"
        style="@style/generalText1"
        android:layout_marginTop="10dip"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/logoCreateAccountPg"
        />

    <Button
        android:id="@+id/confirmCreateAccountBtn"
        style="@style/generalBtn2"
        android:layout_marginTop="25dip"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/textPhoneNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>