<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dip"
    android:layout_height="220dip"
    android:backgroundTint="@color/color_5"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="5dip"
    app:cardPreventCornerOverlap="true"
    >

    <LinearLayout
        android:layout_width="330dip"
        android:layout_height="220dip"
        android:layout_marginStart="8dip"
        android:layout_marginTop="10dip"
        android:layout_marginEnd="8dip"
        android:layout_marginBottom="5dip"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="3"
            android:background="@color/color_1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/portfolioAddPreviewImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/popup_keyword_outline"
                    android:src="@mipmap/ic_image_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dip"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="5">

                <EditText
                    android:id="@+id/portfolioAddTitle"
                    style="@style/generalText2"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:hint="@string/write_a_title" />

                <EditText
                    android:id="@+id/portfolioAddDesc"
                    style="@style/generalText1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3.2"
                    android:gravity="top"
                    android:hint="@string/write_a_description"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addPortfolioApplyBtn"
                style="@style/addPortfolioPopup"
                android:layout_weight="1"
                android:layout_marginEnd="5dip"
                android:text="@string/apply" />

            <Button
                android:id="@+id/addPortfolioCancelBtn"
                style="@style/addPortfolioPopup"
                android:layout_weight="1"
                android:layout_marginStart="5dip"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>