<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dip"
    android:layout_height="180dip"
    tools:context=".inputPopup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        >

        <TextView
            android:id="@+id/textInput"
            style="@style/generalText"
            android:text="@string/input"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/textLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="bottom"
            android:weightSum="7"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:scaleType="centerInside"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                app:srcCompat="@drawable/ic_right_arrow_foreground" />

            <EditText
                android:id="@+id/textRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnLayerr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/applyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancelBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintStart_toEndOf="@id/applyBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/applyBtn"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>